update to use modern Java